samples/_failures_safe/1761226749_451f82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff4c60f8.c: In function ‘create_parser_node’:
./samples/SAFE/__tmp_ff4c60f8.c:165:5: error: expected declaration or statement at end of input
  165 |     if (node == NULL) {
      |     ^~
./samples/SAFE/__tmp_ff4c60f8.c:165:5: error: expected declaration or statement at end of input
